--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "exceljs": "^4.4.0",
+    "file-type": "^21.3.0",
     "filepond": "^4.32.11",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
     "filepond-plugin-image-validate-size": "^1.2.7",
+    "filesize": "^11.0.13",
     "got": "^14.6.6",
     "html-react-parser": "^5.2.15",
     "ioredis": "^5.9.2",
@@ -71,6 +73,7 @@
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "slash": "^5.1.0",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "zod": "^4.3.6",
